<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Town Kitchen</string>
    <string name="login_label">Sign in with The Town Kitchen</string>
    <string name="title_activity_menu_list">Menu List</string>
    <string name="settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="signout">Signout</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="photo">photo</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_delivery_location">Choose Delivery Location</string>
    <string name="FACEBOOK_APP_ID">1621411151403659</string>
    <string name="title_activity_payment_info">PaymentInfoActivity</string>
    <string name="save_credit_card_info">Save my credit card info for future use</string>
    <string name="submit_payment_info">Submit Payment Info</string>
    <string name="title_activity_order_summary">OrderSummaryActivity</string>
    <string name="submit_coupon">Apply</string>
    <string name="order_sub_total">Sub Total</string>
    <string name="tax">Tax</string>
    <string name="order_total">Total</string>
    <string name="discount">Discount</string>
    <string name="delivering_to">Delivering to</string>
    <string name="submit_order">Submit Order</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="feedback_prompt">RATE YOUR ORDER</string>
    <string name="action_date">action_date</string>
    <string name="today">Today</string>
    <string name="edit_payment_info">Edit Payment Info</string>
    <string name="action_view_order_summary">View Order Summary</string>
    <string name="order_summary">Order Summary</string>
    <string name="deliver_here">DELIVER HERE</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="nav_item_profile">Profile</string>
    <string name="current_menu">Current Menu</string>
    <string name="nav_item_about">About</string>
    <string name="order_processing">Your order is being processed...</string>
    <string name="choose_delivery_location">Choose Delivery Location</string>
    <string name="the_town_kitchen">The Town Kitchen</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>